--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "react-hook-form": "^7.33.1",
     "react-player": "^2.10.1",
     "react-router-dom": "^5.3.3",
+    "react-router-dom-v5-compat": "^6.9.0",
     "react-scripts": "5.0.1",
     "rimraf": "^3.0.2",
     "sass-loader": "13.0.2",
@@ -104,6 +105,7 @@
     "jest-mock-extended": "^2.0.6",
     "openapi-typescript-codegen": "^0.23.0",
     "replace-in-file": "^6.3.5",
+    "tailwindcss": "^3.2.7",
     "ts-jest": "^28.0.5",
     "typescript-eslint": "^0.0.1-alpha.0"
   }
