--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "@chakra-ui/react": "^1.7.5",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.4",
@@ -43,6 +45,8 @@
     "react-context-mutex": "^1.0.8",
     "react-dom": "^16.8.0",
     "react-hook-form": "^7.33.1",
+    "react-icons": "^4.8.0",
+    "react-icons-kit": "^2.0.0",
     "react-player": "^2.10.1",
     "react-router-dom": "^5.3.3",
     "react-router-dom-v5-compat": "^6.9.0",
