--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^1.7.5",
+    "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@headlessui/react": "^1.7.13",
@@ -23,8 +23,8 @@
     "@types/jest": "^28.1.5",
     "@types/lodash.throttle": "^4.1.7",
     "@types/node": "^18.0.3",
-    "@types/react": "^16.8.0",
-    "@types/react-dom": "^16.8.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.3",
     "assert": "^2.0.0",
     "axios": "^0.27.2",
@@ -39,12 +39,13 @@
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
     "nanoid": "^4.0.0",
-    "node-sass": "^7.0.1",
+    "next": "^12.0.0",
+    "node-sass": "^6.0.0",
     "normalize.css": "^8.0.1",
     "phaser": "^3.55.2",
-    "react": "^16.8.0",
-    "react-context-mutex": "^1.0.8",
-    "react-dom": "^16.8.0",
+    "react": "^17.0.0",
+    "react-context-mutex": "^2.0.0",
+    "react-dom": "^17.0.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.8.0",
     "react-icons-kit": "^2.0.0",
