--- a/townService/package.json
+++ b/townService/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "@jonbell/tiled-map-type-guard": "^2.0.6",
+    "@twilio/conversations": "^2.3.0",
     "@types/express": "^4.17.13",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
