--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,71 +3,69 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^1.0.0",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@chakra-ui/react": "^2.0.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.13",
-    "@heroicons/react": "^2.0.16",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@heroicons/react": "^2.0.17",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
     "@tailwindcss/forms": "^0.5.3",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@twilio-labs/plugin-rtc": "^0.8.3",
-    "@twilio/conversations": "^2.1.0",
-    "@twilio/video-processors": "^1.0.2",
-    "@twilio/video-room-monitor": "^1.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@twilio-labs/plugin-rtc": "^0.8.4",
+    "@twilio/conversations": "^2.3.0",
+    "@twilio/video-processors": "^2.0.0",
     "@types/d3-timer": "^3.0.0",
     "@types/enzyme": "^3.10.12",
     "@types/fscreen": "^1.0.1",
-    "@types/jest": "^28.1.5",
+    "@types/jest": "^29.5.0",
     "@types/lodash.throttle": "^4.1.7",
-    "@types/node": "^18.0.3",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/node": "^18.15.11",
+    "@types/react": "18.0.32",
+    "@types/react-dom": "18.0.11",
     "assert": "^2.0.0",
-    "axios": "^0.27.2",
+    "axios": "^1.3.4",
     "clsx": "^1.2.1",
-    "concurrently": "^7.2.2",
+    "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
     "d3-timer": "^3.0.1",
     "enzyme": "^3.11.0",
-    "framer-motion": "^6.5.0",
+    "eslint": "8.37.0",
+    "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.10.0",
     "fscreen": "^1.2.0",
     "linkify-it": "^4.0.1",
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
-    "nanoid": "^4.0.0",
-    "next": "^12.0.0",
-    "node-sass": "^6.0.0",
+    "nanoid": "^4.0.2",
+    "next": "^13.0.0",
     "normalize.css": "^8.0.1",
     "phaser": "^3.55.2",
-    "react": "^17.0.0",
-    "react-context-mutex": "^2.0.0",
-    "react-dom": "^17.0.0",
-    "react-hook-form": "^7.33.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-icons-kit": "^2.0.0",
-    "react-player": "^2.10.1",
-    "react-router-dom": "^5.3.3",
-    "react-router-dom-v5-compat": "^6.9.0",
-    "react-scripts": "5.0.1",
-    "rimraf": "^3.0.2",
-    "sass-loader": "13.0.2",
-    "socket.io-client": "^4.5.1",
+    "react-player": "^2.12.0",
+    "react-router-dom": "^6.10.0",
+    "rimraf": "^4.4.1",
+    "sass-loader": "^13.2.2",
+    "socket.io-client": "^4.6.1",
     "strip-color": "^0.1.0",
     "tiled-types": "^1.3.0",
-    "twilio": "^3.78.0",
-    "twilio-video": "^2.22.1",
+    "tss-react": "^4.8.2",
+    "twilio": "^4.9.0",
+    "twilio-video": "^2.27.0",
     "typed-emitter": "^2.1.0",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "typescript": "5.0.3",
+    "web-vitals": "^3.3.0"
   },
   "scripts": {
     "prestart": "npm run client",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "next start",
+    "build": "next build",
+    "dev": "next dev",
     "test": "cross-env DEBUG_PRINT_LIMIT=0 jest",
     "test-watch": "jest --watch",
     "eject": "react-scripts eject",
@@ -91,28 +89,31 @@
   },
   "devDependencies": {
     "@geckos.io/phaser-on-nodejs": "^1.2.7",
-    "@socket.io/component-emitter": "^3.1.0",
-    "@stryker-mutator/core": "^6.1.2",
-    "@stryker-mutator/jest-runner": "^6.2.2",
-    "@stryker-mutator/typescript-checker": "^6.1.2",
-    "@testing-library/react": "^12.1.0",
-    "@testing-library/user-event": "^14.2.1",
+    "@socket.io/component-emitter": "^4.0.0",
+    "@stryker-mutator/core": "^6.4.2",
+    "@stryker-mutator/jest-runner": "^6.4.2",
+    "@stryker-mutator/typescript-checker": "^6.4.2",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/linkify-it": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@types/react": "^18.0.33",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "autoprefixer": "^10.4.14",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^28.1.2",
-    "jest-environment-jsdom": "^28.1.3",
-    "jest-mock-extended": "^2.0.6",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-mock-extended": "^3.0.4",
     "openapi-typescript-codegen": "^0.23.0",
+    "postcss": "^8.4.21",
     "replace-in-file": "^6.3.5",
-    "tailwindcss": "^3.2.7",
-    "ts-jest": "^28.0.5",
+    "tailwindcss": "^3.3.1",
+    "ts-jest": "^29.1.0",
     "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
