--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "@tailwindcss/forms": "^0.5.3",
+    "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@twilio-labs/plugin-rtc": "^0.8.4",
@@ -22,8 +23,9 @@
     "@types/jest": "^29.5.0",
     "@types/lodash.throttle": "^4.1.7",
     "@types/node": "^18.15.11",
-    "@types/react": "18.0.32",
+    "@types/react": "^18.0.33",
     "@types/react-dom": "18.0.11",
+    "@typescript-eslint/parser": "^5.0.0",
     "assert": "^2.0.0",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
@@ -42,15 +44,16 @@
     "next": "^13.0.0",
     "normalize.css": "^8.0.1",
     "phaser": "^3.55.2",
+    "prettier": ">=2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-icons-kit": "^2.0.0",
     "react-player": "^2.12.0",
-    "react-router-dom": "^6.10.0",
     "rimraf": "^4.4.1",
     "sass-loader": "^13.2.2",
+    "sharp": "^0.32.0",
     "socket.io-client": "^4.6.1",
     "strip-color": "^0.1.0",
     "tiled-types": "^1.3.0",
@@ -59,7 +62,8 @@
     "twilio-video": "^2.27.0",
     "typed-emitter": "^2.1.0",
     "typescript": "5.0.3",
-    "web-vitals": "^3.3.0"
+    "web-vitals": "^3.3.0",
+    "webpack": "^5.0.0"
   },
   "scripts": {
     "prestart": "npm run client",
@@ -70,7 +74,7 @@
     "test-watch": "jest --watch",
     "eject": "react-scripts eject",
     "format": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx ",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx\nnext lint",
     "client": "openapi --input ../shared/generated/swagger.json --output ./src/generated/client --client axios --name TownsServiceClient",
     "stryker-prepare": "replace-in-file '/../../..//g' '../../../../../' src/types/CoveyTownSocket.d.ts --isRegex",
     "stryker": "stryker run"
@@ -89,6 +93,7 @@
   },
   "devDependencies": {
     "@geckos.io/phaser-on-nodejs": "^1.2.7",
+    "@next/eslint-plugin-next": "^13.3.0",
     "@socket.io/component-emitter": "^4.0.0",
     "@stryker-mutator/core": "^6.4.2",
     "@stryker-mutator/jest-runner": "^6.4.2",
@@ -106,6 +111,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "install-peers": "^1.0.4",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-mock-extended": "^3.0.4",
