--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,15 +34,15 @@
     "cross-env": "^7.0.3",
     "d3-timer": "^3.0.1",
     "enzyme": "^3.11.0",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
     "framer-motion": "^10.10.0",
     "fscreen": "^1.2.0",
     "linkify-it": "^4.0.1",
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
     "nanoid": "^4.0.2",
-    "next": "^13.0.0",
+    "next": "^13.3.0",
     "normalize.css": "^8.0.1",
     "phaser": "^3.55.2",
     "prettier": ">=2.0.0",
@@ -52,7 +52,7 @@
     "react-icons": "^4.8.0",
     "react-icons-kit": "^2.0.0",
     "react-player": "^2.12.0",
-    "rimraf": "^4.4.1",
+    "rimraf": "^5.0.0",
     "sass-loader": "^13.2.2",
     "sharp": "^0.32.0",
     "socket.io-client": "^4.6.1",
@@ -62,7 +62,7 @@
     "twilio": "^4.9.0",
     "twilio-video": "^2.27.0",
     "typed-emitter": "^2.1.0",
-    "typescript": "5.0.3",
+    "typescript": "^5.0.4",
     "web-vitals": "^3.3.0",
     "webpack": "^5.0.0"
   },
