--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "react-icons-kit": "^2.0.0",
     "react-player": "^2.12.0",
     "rimraf": "^5.0.0",
+    "sass": "^1.61.0",
     "sass-loader": "^13.2.2",
     "sharp": "^0.32.0",
     "socket.io-client": "^4.6.1",
