--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,8 +41,10 @@
     "linkify-it": "^4.0.1",
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
+    "mongodb": "^5.2.0",
     "nanoid": "^4.0.2",
     "next": "^13.3.0",
+    "next-auth": "^4.22.0",
     "normalize.css": "^8.0.1",
     "phaser": "^3.55.2",
     "prettier": ">=2.0.0",
@@ -58,6 +60,7 @@
     "sharp": "^0.32.0",
     "socket.io-client": "^4.6.1",
     "strip-color": "^0.1.0",
+    "swr": "^2.1.3",
     "tiled-types": "^1.3.0",
     "tss-react": "^4.8.2",
     "twilio": "^4.9.0",
