--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,7 +18,7 @@
     "noImplicitThis": true,
     "strictNullChecks": true,
     "jsx": "preserve",
-    "rootDirs": ["./src/", "./generated/"],
+    // "rootDirs": ["./src/", "./generated/"],
     "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
     "incremental": true,
     "plugins": [
@@ -27,12 +27,12 @@
       }
     ]
   },
-  "include": ["src", "generated", "next-env.d.ts", ".next/types/**/*.ts"],
+  "include": ["src", "generated", "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "references": [
     {
       "path": "../shared/",
       "@/*": ["./src/*"]
     }
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules ", ".next", ".github", ".vscode"]
 }
