--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -39,10 +39,21 @@ jobs:
         uses: github/codeql-action/analyze@v2
         with:
           category: "/language:${{ matrix.language }}"
+          upload: False
+          output: sarif-results
           
       - name: filter-sarif
         uses: advanced-security/filter-sarif@v1
         with:
-        # filter out all test files unless they contain a sql-injection vulnerability
+        # Filter twilio backgrounds
           patterns: |
-            -frontend/public/virtualbackground/*
+            +**/*.js
+            -**/*twilio*.js
+            -**/*tflite*.js
+          input: sarif-results/${{ matrix.language }}.sarif
+          output: sarif-results/${{ matrix.language }}.sarif
+      
+      - name: Upload SARIF
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: sarif-results/${{ matrix.language }}.sarif
