--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -39,3 +39,21 @@ jobs:
         uses: github/codeql-action/analyze@v2
         with:
           category: "/language:${{ matrix.language }}"
+          upload: False
+          output: sarif-results
+          
+      - name: filter-sarif
+        uses: advanced-security/filter-sarif@v1
+        with:
+        # Filter twilio backgrounds
+          patterns: |
+            +**/*.js
+            -**/*twilio*.js
+            -**/*tflite*.js
+          input: sarif-results/${{ matrix.language }}.sarif
+          output: sarif-results/${{ matrix.language }}.sarif
+      
+      - name: Upload SARIF
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: sarif-results/${{ matrix.language }}.sarif
