--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   "dependencies": {
     "@types/ramda": "^0.27.34",
     "ramda": "^0.27.1",
-    "typescript-is": "^0.17.0"
+    "typescript-is": "^0.17.0",
+    "yarn": "^1.22.19"
   },
   "files": [
     "townService/src/town/Town.ts",
