Fixed getPlaceHolder Errors in test

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,7 +17,7 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     // "rootDirs": ["./src/", "./generated/"],
     "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
     "incremental": true,
