--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@twilio-labs/plugin-rtc": "^0.8.4",
     "@twilio/conversations": "^2.3.0",
     "@twilio/video-processors": "^2.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/d3-timer": "^3.0.0",
     "@types/enzyme": "^3.10.12",
     "@types/fscreen": "^1.0.1",
@@ -30,6 +31,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "assert": "^2.0.0",
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
     "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
@@ -43,8 +45,9 @@
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
     "mongodb": "^4.1.1",
+    "mongoose": "^7.0.5",
     "nanoid": "^4.0.2",
-    "next": "^13.3.0",
+    "next": "^13.3.1",
     "next-auth": "^4.22.0",
     "normalize.css": "^8.0.1",
     "phaser": "^3.55.2",
